--- a/translations/cs.po
+++ b/translations/cs.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-10-31 15:31+0100\n"
-"PO-Revision-Date: 2024-11-05 17:51+0100\n"
+"PO-Revision-Date: 2024-11-05 18:30+0100\n"
 "Last-Translator: Amerey <info@amerey.eu>\n"
 "Language-Team: \n"
 "Language: cs\n"
@@ -81,7 +81,7 @@ msgstr "Použít efekt rozostření na asistenta přichycení"
 
 #: dist/prefs.js:718
 msgid "Selected tile preview"
-msgstr ""
+msgstr "Náhled vybrané dlaždice"
 
 #: dist/prefs.js:719
 msgid "Apply blur effect to selected tile preview"
@@ -300,226 +300,227 @@ msgstr "Pomocí klávesových zkratek provádějte akce na vybraném okně"
 
 #: dist/prefs.js:1050
 msgid "Move window to right tile"
-msgstr ""
+msgstr "Přesunout okno na pravou dlaždici"
 
 #: dist/prefs.js:1052
 msgid "Move the focused window to the tile on its right"
-msgstr ""
+msgstr "Přesuňte vybrané okno na dlaždici napravo"
 
 #: dist/prefs.js:1061
 msgid "Move window to left tile"
-msgstr ""
+msgstr "Přesunout okno na levou dlaždici"
 
 #: dist/prefs.js:1062
 msgid "Move the focused window to the tile on its left"
-msgstr ""
+msgstr "Přesuňte vybrané okno na dlaždici nalevo"
 
 #: dist/prefs.js:1068
 msgid "Move window to tile above"
-msgstr ""
+msgstr "Přesunout okno na dlaždici výše"
 
 #: dist/prefs.js:1069
 msgid "Move the focused window to the tile above"
-msgstr ""
+msgstr "Přesuňte vybrané okno na dlaždici výše"
 
 #: dist/prefs.js:1075
 msgid "Move window to tile below"
-msgstr ""
+msgstr "Přesunout okno na dlaždici níže"
 
 #: dist/prefs.js:1076
 msgid "Move the focused window to the tile below"
-msgstr ""
+msgstr "Přesuňte vybrané okno na dlaždici níže"
 
 #: dist/prefs.js:1082
 msgid "Span window to right tile"
-msgstr ""
+msgstr "Roztáhnout okno na pravou dlaždici"
 
 #: dist/prefs.js:1083
 msgid "Span the focused window to the tile on its right"
-msgstr ""
+msgstr "Roztáhněte vybrané okno na dlaždici napravo"
 
 #: dist/prefs.js:1089
 msgid "Span window to left tile"
-msgstr ""
+msgstr "Roztáhnout okno na levou dlaždici"
 
 #: dist/prefs.js:1090
 msgid "Span the focused window to the tile on its left"
-msgstr ""
+msgstr "Roztáhněte vybrané okno na dlaždici nalevo"
 
 #: dist/prefs.js:1096
 msgid "Span window above"
-msgstr ""
+msgstr "Roztáhnout okno výše"
 
 #: dist/prefs.js:1097
 msgid "Span the focused window to the tile above"
-msgstr ""
+msgstr "Roztáhněte vybrané okno na dlaždici výše"
 
 #: dist/prefs.js:1103
 msgid "Span window down"
-msgstr ""
+msgstr "Roztáhnout okno níže"
 
 #: dist/prefs.js:1104
 msgid "Span the focused window to the tile below"
-msgstr ""
+msgstr "Roztáhněte vybrané okno na dlaždici níže"
 
 #: dist/prefs.js:1110
 msgid "Span window to all tiles"
-msgstr ""
+msgstr "Roztáhnout okno na všechny dlaždice"
 
 #: dist/prefs.js:1111
 msgid "Span the focused window to all the tiles"
-msgstr ""
+msgstr "Roztáhněte vybrané okno na všechny dlaždice"
 
 #: dist/prefs.js:1117
 msgid "Untile focused window"
-msgstr ""
+msgstr "Odpojit vybrané okno z dlaždic"
 
 #: dist/prefs.js:1125
 msgid "Move window to the center"
-msgstr ""
+msgstr "Přesunout okno do středu"
 
 #: dist/prefs.js:1127
 msgid "Move the focused window to the center of the screen"
-msgstr ""
+msgstr "Přesuňte vybrané okno do středu obrazovky"
 
 #: dist/prefs.js:1136
 msgid "Focus window to the right"
-msgstr ""
+msgstr "Vybrat okno napravo"
 
 #: dist/prefs.js:1138
 msgid "Focus the window to the right of the current focused window"
-msgstr ""
+msgstr "Vyberte okno napravo od aktuálně aktivního okna"
 
 #: dist/prefs.js:1145
 msgid "Focus window to the left"
-msgstr ""
+msgstr "Vybrat okno nalevo"
 
 #: dist/prefs.js:1146
 msgid "Focus the window to the left of the current focused window"
-msgstr ""
+msgstr "Vyberte okno nalevo od aktuálně aktivního okna"
 
 #: dist/prefs.js:1152
 msgid "Focus window above"
-msgstr ""
+msgstr "Vybrat okno nahoře"
 
 #: dist/prefs.js:1153
 msgid "Focus the window above the current focused window"
-msgstr ""
+msgstr "Vyberte okno nad aktuálně aktivním oknem"
 
 #: dist/prefs.js:1159
 msgid "Focus window below"
-msgstr ""
+msgstr "Vybrat okno dole"
 
 #: dist/prefs.js:1160
 msgid "Focus the window below the current focused window"
-msgstr ""
+msgstr "Vyberte okno pod aktuálně aktivním oknem"
 
 #: dist/prefs.js:1187
 msgid "View and Customize all the Shortcuts"
-msgstr ""
+msgstr "Zobrazit a přizpůsobit všechny zkratky"
 
 #: dist/prefs.js:1215 dist/prefs.js:1216
 msgid "View and Customize Shortcuts"
-msgstr ""
+msgstr "Zobrazit a přizpůsobit zkratky"
 
 #: dist/prefs.js:1237
 msgid "Import, export and reset"
-msgstr ""
+msgstr "Import, export a reset"
 
 #: dist/prefs.js:1239
 msgid "Import, export and reset the settings of Tiling Shell"
-msgstr ""
+msgstr "Importujte, exportujte a resetujte nastavení Tiling Shell"
 
 #: dist/prefs.js:1244 dist/prefs.js:1245
 msgid "Export settings"
-msgstr ""
+msgstr "Export nastavení"
 
 #: dist/prefs.js:1246
 msgid "Export settings to a file"
-msgstr ""
+msgstr "Exportujte nastavení do souboru"
 
 #: dist/prefs.js:1249
 msgid "Export settings to a text file"
-msgstr ""
+msgstr "Export nastavení do textového souboru"
 
 #: dist/prefs.js:1302 dist/prefs.js:1303
 msgid "Import settings"
-msgstr ""
+msgstr "Export nastavení"
 
 #: dist/prefs.js:1304
 msgid "Import settings from a file"
-msgstr ""
+msgstr "Importujte nastavení ze souboru"
 
 #: dist/prefs.js:1307
 msgid "Select a text file to import from"
-msgstr ""
+msgstr "Vyberte textový soubor, ze kterého chcete importovat"
 
 #: dist/prefs.js:1351 dist/prefs.js:1352
 msgid "Reset settings"
-msgstr ""
+msgstr "Resetovat nastavení"
 
 #: dist/prefs.js:1353
 msgid "Bring back the default settings"
-msgstr ""
+msgstr "Obnovte výchozí nastavení"
 
 #: dist/prefs.js:1368
 msgid "Donate on ko-fi"
-msgstr ""
+msgstr "Darovat na ko-fi"
 
 #: dist/prefs.js:1374
 msgid "Report a bug"
-msgstr ""
+msgstr "Nahlásit chybu"
 
 #: dist/prefs.js:1380
 msgid "Request a feature"
-msgstr ""
+msgstr "Žádost o funkci"
 
 #: dist/prefs.js:1388
 msgid "Have issues, you want to suggest a new feature or contribute?"
-msgstr ""
+msgstr "Máte problémy, chcete navrhnout novou funkci nebo přispět?"
 
 #: dist/prefs.js:1395
 msgid "Open a new issue on"
-msgstr ""
+msgstr "Otevřít nový problém na"
 
 #: dist/extension.js:4500
 msgid "Edit Layouts"
-msgstr ""
+msgstr "Upravit rozvržení"
 
 #: dist/extension.js:4510
 msgid "New Layout"
-msgstr ""
+msgstr "Nové rozvržení"
 
 #: dist/extension.js:4691
 msgid "to split a tile"
-msgstr ""
+msgstr "rozdělí dlaždici"
 
 #: dist/extension.js:4730
 msgid "to split a tile vertically"
-msgstr ""
+msgstr "rozdělí dlaždici vertikálně"
 
 #: dist/extension.js:4750
 msgid "to delete a tile"
-msgstr ""
+msgstr "smate dlaždici"
 
 #: dist/extension.js:4775
 msgid "use the indicator button to save or cancel"
-msgstr ""
+msgstr "použijte ikonu pro uložení nebo zrušení"
 
 #: dist/prefs.js:815
 msgid "Enable Auto Tiling"
-msgstr ""
+msgstr "Povolit automatické dlaždice"
 
 #: dist/prefs.js:816
 msgid "Automatically tile new windows to the best tile"
-msgstr ""
+msgstr "Automaticky vložte nová okna na nejvhodnějsí dlaždice"
 
 #: dist/prefs.js:795
 msgid "Tiling System deactivation key"
-msgstr ""
+msgstr "Klávesa pro deaktivaci systému dlaždic"
 
 #: dist/prefs.js:797
 msgid ""
 "Hold the deactivation key while moving a window to deactivate the tiling "
 "system"
 msgstr ""
+"Podržte deaktivační klávesu při pohybu okna pro deaktivaci systému dláždic"
